Fixed bug where breadcrumb arrows overlapped the searchFilterSort bar

--- a/client/src/CSS/scss_partials/home/menu/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/_navbar.scss
@@ -3,8 +3,6 @@
 
 // SCSS for classNames shared by the navbar, breadcrumb, and hamburger components
 .navbar-container {
-	// Must be more than listViewSearchFilterSortBar.scss
-	z-index: 2;
 	position: fixed;
 	width: 100%;
 	top: 0;
@@ -127,4 +125,13 @@
 			color: v.$bright-red;
 		}
 	}
+}
+
+/*
+Increases navbar z-index for when the hamburger menu is present so hamburger
+dropdown can overlap all other components
+*/
+.navbar-container--increased-z-index {
+	// Must be more than listViewSearchFilterSortBar.scss
+	z-index: 2;
 }
