--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -93,7 +93,7 @@ $item-container-project-bugs-item-box-stats-container-width: 200px;
 //==========
 // Position
 //==========
-$navbar-breadcrumb-arrow-top: -2px;
+$navbar-breadcrumb-arrow-top: -1px;
 $navbar-breadcrumb-arrow-left: 0px;
 $navbar-hamburger-button-left: 10px;
 $item-search-bar-left: 15px;
